[FIXED] contrast between different containers
Now the text in the comments is easier to read because of higher contrast

--- a/frontEnd/src/components/UI/AddCommentForm.module.css
+++ b/frontEnd/src/components/UI/AddCommentForm.module.css
@@ -23,3 +23,8 @@
     margin-right: 20px;
     margin-left: 10px;
 }
+
+.userPhotoDiv{
+    margin-top: -20px;
+    margin-right: -0px;
+}
