--- a/frontEnd/src/containers/userProfile/tabSelector/tabSelector.module.css
+++ b/frontEnd/src/containers/userProfile/tabSelector/tabSelector.module.css
@@ -1,5 +1,5 @@
 .mainContainer{
     width: 60%;
     padding: 25px;
-    background-color: #82ca66;
+    background-color: #70c45c;
 }
