--- a/frontEnd/src/containers/userProfile/tabs/comments/comments.module.css
+++ b/frontEnd/src/containers/userProfile/tabs/comments/comments.module.css
@@ -15,7 +15,6 @@
 
 .commentAuthor{
     font-weight: 500;
-    margin-top: 30px;
 }
 .commentAuthor a{
     color: inherit;
