--- a/frontEnd/src/containers/userProfile/userProfile.module.css
+++ b/frontEnd/src/containers/userProfile/userProfile.module.css
@@ -6,7 +6,7 @@
 }
 .mainContainer{
     z-index: 0;
-    background-color: #82ca66;
+    background-color: #70c45c;
     width: 60%;
     margin-top: 40px;
     padding: 25px;
@@ -35,7 +35,7 @@
 }
 
 .bio{
-    background-color: #53c25385;
+    background-color: #83dc61;
     border-radius: 4px;
     width: 375px;
     height: 237px;
@@ -128,7 +128,7 @@
 .userProfileMenu{
     width: 60%;
     height: 30px;
-    background-color: #82ca66;
+    background-color: #70c45c;
     padding: 10px 25px 10px 25px;
     border-bottom: 3px solid black;
     display: flex;
@@ -141,7 +141,7 @@
     z-index: 20;
     margin-top: -15px;
     width: 150px;
-    background-color: #82ca66;
+    background-color: #70c45c;
     display: flex;
     justify-content: center;
     vertical-align: middle;
@@ -165,7 +165,7 @@
 
 .active{
     border: black 3px solid;
-    border-bottom: #82ca66 3px solid;
+    border-bottom: #70c45c 3px solid;
 }
 .center{
     display: flex;
